--- a/XEngine.GfxHAL.D3D12/XEngine.GfxHAL.D3D12.vcxproj
+++ b/XEngine.GfxHAL.D3D12/XEngine.GfxHAL.D3D12.vcxproj
@@ -46,6 +46,13 @@
         %(AdditionalDependencies)
       </AdditionalDependencies>
     </Lib>
+    <PostBuildEvent>
+      <Command>
+        xcopy /y $(SolutionDir)External\Microsoft.Direct3D.D3D12\bin\$(Platform)\*.dll $(OutDir)D3D12\
+        xcopy /y $(SolutionDir)External\Microsoft.Direct3D.D3D12\bin\$(Platform)\*.pdb $(OutDir)D3D12\
+      </Command>
+      <Message>Copying D3D12 DLLs to output directory</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
 
   <ItemGroup>
@@ -65,6 +72,5 @@
   </ItemGroup>
 
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets" />
 
 </Project>
