--- a/XEngine.Core/XEngine.Core.vcxproj
+++ b/XEngine.Core/XEngine.Core.vcxproj
@@ -110,10 +110,10 @@
     <ProjectReference Include="..\XEngine.Common\XEngine.Common.vcxproj">
       <Project>{276891e4-c661-4502-b581-781efb8098d6}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\XEngine.GfxHAL.Common\XEngine.GfxHAL.Common.vcxproj">
+    <ProjectReference Include="..\XEngine.Gfx.HAL.Shared\XEngine.Gfx.HAL.Shared.vcxproj">
       <Project>{102d6f8c-faad-4fd3-9b3a-16923042465e}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\XEngine.GfxHAL.D3D12\XEngine.GfxHAL.D3D12.vcxproj">
+    <ProjectReference Include="..\XEngine.Gfx.HAL.D3D12\XEngine.Gfx.HAL.D3D12.vcxproj">
       <Project>{1ed495b0-b69b-4409-83fc-587f590eab29}</Project>
     </ProjectReference>
     <ProjectReference Include="..\XEngine.Render\XEngine.Render.vcxproj">
