--- a/XEngine.Gfx.HAL.ShaderCompiler/XEngine.Gfx.HAL.ShaderCompiler.vcxproj
+++ b/XEngine.Gfx.HAL.ShaderCompiler/XEngine.Gfx.HAL.ShaderCompiler.vcxproj
@@ -15,8 +15,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{25b57cc9-0f71-4901-ba27-3ea9952fa23c}</ProjectGuid>
-    <RootNamespace>XEngineRender</RootNamespace>
+    <ProjectGuid>{0e31d4f6-c1d4-4a6f-8c42-a0f7b2e4d9d9}</ProjectGuid>
+    <RootNamespace>XEngineGfxHALShaderCompiler</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
 
@@ -32,38 +32,42 @@
     <PublicIncludeDirectories>$(ProjectDir);$(PublicIncludeDirectories)</PublicIncludeDirectories>
   </PropertyGroup>
 
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <AdditionalIncludeDirectories>
+        $(SolutionDir)External\Microsoft.DirectXShaderCompiler\include;
+        %(AdditionalIncludeDirectories)
+      </AdditionalIncludeDirectories>
+    </ClCompile>
+    <Lib>
+      <AdditionalLibraryDirectories>
+        $(SolutionDir)External\Microsoft.DirectXShaderCompiler\lib\$(Platform);
+        %(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
+      <AdditionalDependencies>
+        dxcompiler.lib;
+        d3d12.lib;
+        %(AdditionalDependencies)
+      </AdditionalDependencies>
+    </Lib>
+  </ItemDefinitionGroup>
+
   <ItemGroup>
-    <ClInclude Include="XEngine.Render.Allocation.h" />
-    <ClInclude Include="XEngine.Render.Bloom.h" />
-    <ClInclude Include="XEngine.Render.h" />
-    <ClInclude Include="XEngine.Render.PostComposition.h" />
-    <ClInclude Include="XEngine.Render.Scene.h" />
-    <ClInclude Include="XEngine.Render.Scheduler.h" />
-    <ClInclude Include="XEngine.Render.ShaderLibrary.h" />
-    <ClCompile Include="XEngine.Render.Allocation.cpp" />
-    <ClCompile Include="XEngine.Render.Bloom.cpp" />
-    <ClCompile Include="XEngine.Render.cpp" />
-    <ClCompile Include="XEngine.Render.PostComposition.cpp" />
-    <ClCompile Include="XEngine.Render.Scene.cpp" />
-    <ClCompile Include="XEngine.Render.Scheduler.cpp" />
-    <ClCompile Include="XEngine.Render.ShaderLibrary.cpp" />
+    <ClInclude Include="XEngine.Gfx.HAL.ShaderCompiler.h" />
+    <ClInclude Include="XEngine.Gfx.HAL.ShaderCompiler.HLSLPatcher.h" />
+    <ClCompile Include="XEngine.Gfx.HAL.ShaderCompiler.cpp" />
+    <ClCompile Include="XEngine.Gfx.HAL.ShaderCompiler.HLSLPatcher.cpp" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\XLib\XLib.vcxproj">
+    <ProjectReference Include="..\XLib\XLib.vcxproj" >
       <Project>{df81a513-72e3-4b74-b866-97f3bb61d45f}</Project>
     </ProjectReference>
     <ProjectReference Include="..\XEngine.XStringHash\XEngine.XStringHash.vcxproj" >
       <Project>{ca640875-7c04-42ba-b081-8dac82c9f48d}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\XEngine.Gfx.HAL.D3D12\XEngine.Gfx.HAL.D3D12.vcxproj">
-      <Project>{1ed495b0-b69b-4409-83fc-587f590eab29}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\XEngine.Gfx.ShaderLibraryFormat\XEngine.Gfx.ShaderLibraryFormat.vcxproj">
-      <Project>{e41c3648-b10a-4c33-a052-d98f8ed51ab0}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\XEngine.Render.Shaders\XEngine.Render.Shaders.vcxproj">
-      <Project>{e6af7fdc-1839-4501-96b6-389ab9cafddb}</Project>
+    <ProjectReference Include="..\XEngine.Gfx.HAL.Shared\XEngine.Gfx.HAL.Shared.vcxproj" >
+      <Project>{102d6f8c-faad-4fd3-9b3a-16923042465e}</Project>
     </ProjectReference>
   </ItemGroup>
 
